@@ -485,27 +485,12 @@ unsigned char *i18n_numref2utf(char *string){
 }
 
 /*
-** replaces any non US-ASCII chars except for
-** \r\n\t with a '?' char.
-** returns how many characters it replaced
+** replaces invalid UTF-chars
+** with a '?' char.
 */
-int i18n_replace_non_ascii_chars(char *string)
+void i18n_make_valid_utf8(char *string)
 {
-    char *ptr = string;
-    unsigned int c;
-    int count = 0;
-    
-    while (*ptr) {
-        c = (unsigned int) *ptr;
-        if ((c < 0x20 || c > 0x7E)
-            && *ptr != '\n' && *ptr != '\r' && *ptr != '\t') {
-            *ptr = '?';
-            count++;
-        }
-        ptr++;
-    }
-
-    return count;
+    utf8makevalid (string, '?');
 }
 
 /* replaces all control characters in string with a ?
